-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.0.0 Beta3
-
None
-
-
2020wk46, 2020wk48
After a successful build with Conan for qt modules for Android, and configuring the project according to notes in QTBUG-88366, the app apk is built but the libs required for the app from the Conan build are not packaged by androiddeployqt since they are not in the default install prefix of Qt and androiddeployqt doesn't know about the other Conan build paths.
What we need is to allow androiddeployqt to learn about these paths and look into them if they are set by cmake configure step. Probably, this needs to account for both *.so libs and qml modules as well.
- resulted from
-
QTBUG-88366 Modules built with Conan cannot be found by user projects
-
- Reported
-
- resulted in
-
QTBUG-88670 qt3d examples require rhi plugin on Android
-
- Closed
-
-
QTBUG-88667 Conan build for qt3d not building dynamic libs *.so for some plugins
-
- Closed
-
| For Gerrit Dashboard: QTBUG-88519 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 322323,4 | CMake: add CMAKE_FIND_ROOT_PATH as extraPrefixDirs for androiddeployqt | 6.0.0 | qt/qtbase | Status: MERGED | +2 | 0 |
| 322428,4 | Android: use extraPrefixDirs with qmlimportscanner | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 322730,2 | CMake: add CMAKE_FIND_ROOT_PATH as extraPrefixDirs for androiddeployqt | 6.0 | qt/qtbase | Status: MERGED | +2 | 0 |
| 322731,2 | CMake: add CMAKE_FIND_ROOT_PATH as extraPrefixDirs for androiddeployqt | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 415212,2 | androiddeployqt: Only pass qt_install_dir/qml directory if it exists | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 415647,2 | androiddeployqt: Only pass qt_install_dir/qml directory if it exists | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |
| 415648,3 | androiddeployqt: Only pass qt_install_dir/qml directory if it exists | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
| 415656,3 | androiddeployqt: Only pass qt_install_dir/qml directory if it exists | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |